# myst-baker

./: .gitignore  LICENSE  README.md  main.py  myst.yml  pymd_plugin.cmd  pymd_plugin.py  pyproject.toml
.github/workflows/: deploy.yml
content/: calculations.md  gallery.md  index.md  inputs.md  outputs.md
docs/: authors.md  changelog.md  index.md  installation.md
docs/examples/: damped-oscillator.md  potential-field-contour.md  projectile-trajectory.md  revenue-vs-expenses.md
docs/guide/: calculations.md  inputs.md  outputs.md
docs/superpowers/plans/: 2026-07-14-myst-baker-mvp-implementation.md  2026-07-14-pymd-mvp-implementation.md  2026-07-15-calc-fence-syntax.md  2026-07-15-input-output-types-expansion.md  2026-07-17-calc-hide-flag.md  2026-07-17-docs-overhaul.md  2026-07-20-plotly-figure-mode.md
docs/superpowers/specs/: 2026-07-14-input-output-types-expansion-design.md  2026-07-14-myst-baker-myst-plugin-design.md  2026-07-14-pymd-myst-plugin-design.md  2026-07-15-calc-fence-syntax-design.md  2026-07-17-calc-hide-flag-design.md  2026-07-17-docs-overhaul-design.md  2026-07-20-plotly-figure-mode-design.md
scripts/: link_plugin_launcher.py
src/myst_baker/: directives.py  plugin.py  precompute.py  render.py  transform.py
src/myst_baker/static/: plot-embed.css  runtime.js
src/pymd/: directives.py  plugin.py  precompute.py  render.py  transform.py
src/pymd/static/: runtime.js
tests/: test_directives.py  test_e2e_browser.py  test_plugin.py  test_precompute.py  test_render.py  test_transform.py
