[project]
name = "pymd"
version = "0.1.0"
description = "Precomputed interactive docs via a MyST executable plugin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mystmd",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymd"]
